--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "polaris/polaris.shopify.com"
   publish = ".next"
-  command = "cd ../.. && pnpm install && cd polaris/polaris.shopify.com && pnpm build"
+  command = "npm install -g pnpm && pnpm install && pnpm build"
 
 [build.environment]
   NODE_VERSION = "20.10.0"
