Fix Netlify build by removing outdated playroom patch
- Removed incompatible playroom+0.28.0.patch
- Updated build command to handle dependencies properly

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "polaris/polaris.shopify.com"
   publish = ".next"
-  command = "npm install -g pnpm && pnpm install && pnpm build"
+  command = "npm install -g pnpm && pnpm install --ignore-scripts && cd ../.. && pnpm install --ignore-scripts && cd polaris/polaris.shopify.com && pnpm build"
 
 [build.environment]
   NODE_VERSION = "20.10.0"
