--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "polaris/polaris.shopify.com"
   publish = ".next"
-  command = "cd ../.. && pnpm install && pnpm turbo run build --filter='@shopify/polaris-tokens' && cd polaris/polaris.shopify.com && pnpm gen-colors && pnpm gen-assets && pnpm next-build"
+  command = "cd ../.. && pnpm install && cd polaris/polaris-tokens && pnpm build && cd ../polaris.shopify.com && pnpm gen-colors && pnpm gen-assets && pnpm next-build"
 
 [build.environment]
   NODE_VERSION = "20.10.0"
