Fix build command: avoid turbo to resolve configuration issues
- Replace turbo command with direct package builds
- Build polaris-tokens, polaris-icons, and polaris-react sequentially
- This resolves the 'baseBranch' configuration error in turbo.json

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "polaris/polaris.shopify.com"
   publish = ".next"
-  command = "cd ../.. && pnpm install && cd polaris && pnpm turbo run build --filter='@shopify/polaris-tokens' --filter='@shopify/polaris-icons' --filter='@shopify/polaris' && cd polaris.shopify.com && pnpm gen-colors && pnpm gen-assets && pnpm next-build"
+  command = "cd ../.. && pnpm install && cd polaris/polaris-tokens && pnpm build && cd ../polaris-icons && pnpm build && cd ../polaris-react && pnpm build && cd ../polaris.shopify.com && pnpm gen-colors && pnpm gen-assets && pnpm next-build"
 
 [build.environment]
   NODE_VERSION = "20.10.0"
